# ccl

./: README.md  ccl.opam  dune-project  test.ccl
lib/: ccl.ml  ccl.mli  dune  edsl.ml  edsl.mli  lexer.mll  model.ml  model.mli  parser.ml  parser.mli  parser.mly  string_extra.ml
test/: dune  test.ml  test_edsl.ml  test_fix.ml  test_parser.ml  test_pretty.ml  test_property.ml  test_property_roundtrip.ml  testable.ml
test/alcotest_extra/: alcotest_extra.ml  dune  testable.ml
test/cclq-cram/: dune  merge-query.t
test/test_extra/: dune  gen.ml  stress.ml  test_extra.ml  testable.ml
test/test_parser/: dune  test_empty.ml  test_error.ml  test_multiple.ml  test_nested.ml  test_parser.ml  test_single.ml  test_stress.ml  test_value.ml
